--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,6 @@
         que está diseñado para realizar una función determinada directamente
         para el usuario,programa generalmente pequeño y específico que
         se usa particularmente endispositivos móviles.
+        Angel Hernandez Trejo...
     </string>
 </resources>
